--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,22 @@
 body {
   font-family: "Montserrat", sans-serif;
+  background-image: url(/imgs/backround1.jpg);
+  background-size: cover;
 }
 
 h1 {
   font-family: "Poppins", sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 80px;
+  font-weight: 200;
+  margin-top: 30px;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  font-weight: 300;
+  font-size: 25px;
+  margin-top: 40px;
 }
