--- a/styles/style.css
+++ b/styles/style.css
@@ -1,45 +1,3 @@
-html {
-  width: 100%;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  background-image: url(/imgs/backround1.jpg);
-  background-size: cover;
-}
-
-h1 {
-  font-family: "Poppins", sans-serif;
-  color: white;
-  text-align: center;
-  font-size: 80px;
-  font-weight: 200;
-  margin-top: 30px;
-}
-
 h2 {
-  color: white;
-  text-align: center;
-  font-weight: 300;
-  font-size: 25px;
-  margin-top: 40px;
-}
-
-.profile-picture {
-  border-radius: 50%;
-  margin-right: 25px;
-}
-
-.contact-button {
-  border: 1px solid #00a881;
-  color: #00a881;
-  padding: 10px 30px;
-  border-radius: 30px;
-  text-align: center;
-}
-
-.contact-button:hover {
-  border: 1px solid white;
-  color: white;
-  text-decoration: none;
+  color: #4ddbba;
 }
