--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,54 @@
+body {
+  background-color: #0a192f;
+}
+
+h1,
+h2,
+h3 {
+  text-align: left;
+  margin-left: 50px;
+}
+
+h1 {
+  font-size: 80px;
+  color: #ccd6f6;
+  font-family: "Questrial", sans-serif;
+}
+
 h2 {
   color: #4ddbba;
+  font-size: 16px;
+  font-family: "Roboto Mono", monospace;
+  margin-top: 50px;
+}
+
+h3 {
+  font-size: 60px;
+  font-family: "Questrial", sans-serif;
+  color: #8892b0;
+  margin-bottom: 50px;
+}
+
+.navbar-brand {
+  color: #ccd6f6;
+  font-family: "Questrial", sans-serif;
+}
+
+.nav-item {
+  color: #4ddbba;
+  font-family: "Roboto Mono", monospace;
+}
+
+.profile-picture {
+  border-radius: 10%;
+  margin: 10px 20px;
+}
+
+.my-projects-link {
+  color: #4ddbba;
+  font-size: 16px;
+  font-family: "Roboto Mono", monospace;
+  padding: 10px 30px;
+  border: 1px solid #4ddbba;
+  margin-left: 50px;
 }
