--- a/styles/style.css
+++ b/styles/style.css
@@ -40,8 +40,13 @@ h3 {
 }
 
 .profile-picture {
-  border-radius: 10%;
+  border-radius: 4px;
   margin: 10px 20px;
+}
+
+.contact-picture {
+  border: 2px solid #4ddbba;
+  border-radius: 4px;
 }
 
 .my-projects-link {
@@ -51,4 +56,10 @@ h3 {
   padding: 10px 30px;
   border: 1px solid #4ddbba;
   margin-left: 50px;
+}
+
+.my-projects-link:hover {
+  background-color: #4ddbba;
+  color: white;
+  text-decoration: none;
 }
