--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,10 @@ h3 {
   margin-bottom: 50px;
 }
 
+.highlight {
+  color: #4ddbba;
+}
+
 .navbar-brand {
   color: #ccd6f6;
   font-family: "Questrial", sans-serif;
@@ -62,4 +66,14 @@ h3 {
   background-color: #4ddbba;
   color: white;
   text-decoration: none;
+}
+
+.about-me-text {
+  font-family: "Questrial", sans-serif;
+  color: #8892b0;
+  line-height: 2;
+}
+
+.technologies {
+  color: #4ddbba;
 }
