--- a/styles/style.css
+++ b/styles/style.css
@@ -68,10 +68,16 @@ h3 {
   text-decoration: none;
 }
 
+.about-section {
+  margin-top: 60px;
+}
+
 .about-me-text {
   font-family: "Questrial", sans-serif;
   color: #8892b0;
   line-height: 2;
+  text-align: justify;
+  margin: 15px auto;
 }
 
 .technologies {
