--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ h3 {
   border-radius: 4px;
 }
 
-.my-projects-link {
+.highlighted-link {
   color: #4ddbba;
   font-size: 16px;
   font-family: "Roboto Mono", monospace;
@@ -61,7 +61,7 @@ h3 {
   margin-left: 50px;
 }
 
-.my-projects-link:hover {
+.highlighted-link:hover {
   background-color: #4ddbba;
   color: white;
   text-decoration: none;
@@ -86,4 +86,13 @@ h3 {
 .contact-page-info {
   margin-top: 50px;
   text-align: center;
+}
+
+.contact-text {
+  font-family: "Questrial", sans-serif;
+  color: #8892b0;
+  line-height: 2;
+  font-size: 18px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
