--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,8 @@ h3 {
   margin: 15px auto;
 }
 
-.contact-page-info {
+.contact-page-info,
+.certificates-page {
   margin-top: 50px;
   text-align: center;
 }
