--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,11 @@ h3 {
   margin-bottom: 50px;
 }
 
+h4 {
+  color: #ccd6f6;
+  font-family: "Questrial", sans-serif;
+}
+
 .highlight {
   color: #4ddbba;
 }
@@ -48,7 +53,8 @@ h3 {
   margin: 10px 20px;
 }
 
-.aboutme-picture {
+.aboutme-picture,
+.project-img {
   border: 2px solid #4ddbba;
   border-radius: 4px;
 }
@@ -68,8 +74,14 @@ h3 {
   text-decoration: none;
 }
 
-.about-section {
+.about-section,
+.project-section {
   margin-top: 60px;
+}
+
+.section-2 {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .about-me-text {
@@ -99,4 +111,12 @@ h3 {
   border: 3px solid #4ddbba;
   border-radius: 4px;
   margin-top: 50px;
+}
+
+.project-text {
+  font-family: "Questrial", sans-serif;
+  font-size: 18px;
+  color: #8892b0;
+  line-height: 2;
+  text-align: left;
 }
