--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,10 @@ h4 {
   color: #4ddbba;
 }
 
+.navbar-custom {
+  background-color: #0a192f;
+}
+
 .navbar-brand {
   color: #ccd6f6;
   font-family: "Questrial", sans-serif;
@@ -76,7 +80,7 @@ h4 {
 
 .about-section,
 .project-section {
-  margin-top: 60px;
+  margin-top: 120px;
 }
 
 .section-2 {
@@ -94,7 +98,7 @@ h4 {
 
 .contact-page-info,
 .certificates-page {
-  margin-top: 50px;
+  margin-top: 120px;
   text-align: center;
 }
 
@@ -103,7 +107,7 @@ h4 {
   color: #8892b0;
   line-height: 2;
   font-size: 18px;
-  margin-top: 50px;
+  margin-top: 60px;
   margin-bottom: 50px;
 }
 
