--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,21 @@
+:root {
+  --primary-color: #4ddbba;
+  --secondary-color: #ccd6f6;
+  --third-color: #8892b0;
+}
+
 body {
   background-color: #0a192f;
 }
 
 h1 {
   font-size: 80px;
-  color: #ccd6f6;
+  color: var(--secondary-color);
   font-family: "Questrial", sans-serif;
 }
 
 h2 {
-  color: #4ddbba;
+  color: var(--primary-color);
   font-size: 16px;
   font-family: "Roboto Mono", monospace;
   margin-top: 50px;
@@ -18,17 +24,17 @@ h2 {
 h3 {
   font-size: 60px;
   font-family: "Questrial", sans-serif;
-  color: #8892b0;
+  color: var(--third-color);
   margin-bottom: 50px;
 }
 
 h4 {
-  color: #ccd6f6;
+  color: var(--secondary-color);
   font-family: "Questrial", sans-serif;
 }
 
 .highlight {
-  color: #4ddbba;
+  color: var(--primary-color);
 }
 
 .navbar-custom {
@@ -36,24 +42,24 @@ h4 {
 }
 
 .navbar-brand {
-  color: #ccd6f6;
+  color: var(--secondary-color);
   font-family: "Questrial", sans-serif;
 }
 
 .nav-item {
-  color: #4ddbba;
+  color: var(--primary-color);
   font-family: "Roboto Mono", monospace;
 }
 
 .profile-picture {
   border-radius: 4px;
-  border: 0.5px solid #4ddbba;
+  border: 0.5px solid var(--primary-color);
   margin: 10px 20px;
 }
 
 .aboutme-picture,
 .project-img {
-  border: 2px solid #4ddbba;
+  border: 2px solid var(--primary-color);
   border-radius: 4px;
 }
 
@@ -63,16 +69,15 @@ h4 {
 }
 
 .highlighted-link {
-  color: #4ddbba;
+  color: var(--primary-color);
   font-size: 16px;
   font-family: "Roboto Mono", monospace;
   padding: 10px 30px;
-  border: 1px solid #4ddbba;
-  margin-left: 50px;
+  border: 1px solid var(--primary-color);
 }
 
 .highlighted-link:hover {
-  background-color: #4ddbba;
+  background-color: var(--primary-color);
   color: white;
   text-decoration: none;
 }
@@ -89,7 +94,7 @@ h4 {
 
 .about-me-text {
   font-family: "Questrial", sans-serif;
-  color: #8892b0;
+  color: var(--third-color);
   line-height: 2;
   text-align: justify;
   margin: 15px auto;
@@ -103,7 +108,7 @@ h4 {
 
 .contact-text {
   font-family: "Questrial", sans-serif;
-  color: #8892b0;
+  color: var(--third-color);
   line-height: 2;
   font-size: 18px;
   margin-top: 60px;
@@ -111,7 +116,7 @@ h4 {
 }
 
 .certificate-img {
-  border: 3px solid #4ddbba;
+  border: 3px solid var(--primary-color);
   border-radius: 4px;
   margin-top: 50px;
 }
@@ -119,7 +124,7 @@ h4 {
 .project-text {
   font-family: "Questrial", sans-serif;
   font-size: 18px;
-  color: #8892b0;
+  color: var(--third-color);
   line-height: 2;
   text-align: left;
 }
