--- a/styles/style.css
+++ b/styles/style.css
@@ -128,3 +128,25 @@ h4 {
   line-height: 2;
   text-align: left;
 }
+
+@media (max-width: 575px) {
+  h1 {
+    font-size: 50px;
+    line-height: 1.5;
+  }
+
+  h3 {
+    font-size: 42px;
+    line-height: 1;
+  }
+
+  .aboutme-picture {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+  }
+
+  .project-text {
+    text-align: center;
+  }
+}
