--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,10 @@ h4 {
     width: 200px;
   }
 
+  .section-2 {
+    margin: 0 auto;
+  }
+
   .project-text {
     text-align: center;
   }
@@ -148,5 +152,4 @@ h4 {
   font-size: 18px;
   color: var(--third-color);
   line-height: 2;
-  text-align: left;
 }
