--- a/styles/style.css
+++ b/styles/style.css
@@ -153,3 +153,12 @@ h4 {
   color: var(--third-color);
   line-height: 2;
 }
+
+.source-code {
+  font-family: "Questrial", sans-serif;
+  font-size: 12px;
+  color: var(--secondary-color);
+  position: absolute;
+  margin-left: 5px;
+  bottom: 5px;
+}
